--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/potterapi?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=mysql://bd2384e5710689:c124ff7e@us-cdbr-east-02.cleardb.com/heroku_a1f5c7aeabd03c4?reconnect=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/potterapi?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 # MySQL
 spring.jpa.show-sql=false
