--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,8 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 # Caching
 spring.cache.type=redis
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
+spring.redis.host=ec2-52-201-9-81.compute-1.amazonaws.com
+spring.redis.port=8239
+
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
