--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,45 @@
-# Datasource
-spring.datasource.url=mysql://bd2384e5710689:c124ff7e@us-cdbr-east-02.cleardb.com/heroku_a1f5c7aeabd03c4?reconnect=true
+# Datasource - Heroku Profile
+#spring.datasource.url=mysql://bd2384e5710689:c124ff7e@us-cdbr-east-02.cleardb.com/heroku_a1f5c7aeabd03c4?reconnect=true
+
+# Cache - Heroku Profile Settings
+#spring.cache.type=redis
+#spring.redis.host=ec2-52-201-9-81.compute-1.amazonaws.com
+#spring.redis.port=8239
+
+# Datasource on LocalHost
 #spring.datasource.url=jdbc:mysql://localhost:3306/potterapi?useSSL=false&allowPublicKeyRetrieval=true
 #spring.datasource.username=root
 #spring.datasource.password=root
+
+#DataSource on Docker
+spring.datasource.url=jdbc:mysql://db:3306/potterapi?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.name=SpringBootMySQLDataSource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.pool-name=SpringBootMySQLPool
+spring.datasource.hikari.connection-test-query=select now();
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=10000
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+
 # MySQL
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
+
 # Logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
+
 # Caching
 spring.cache.type=redis
-spring.redis.host=ec2-52-201-9-81.compute-1.amazonaws.com
-spring.redis.port=8239
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
 
-#spring.redis.host=127.0.0.1
-#spring.redis.port=6379
+
