--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,23 @@
 version: '3'
 services:
-  makemagicapi_springboot:
+  makemagicapi:
     build:
       context: ./
       dockerfile: ./Dockerfile
-    image: makemagic_springboot/api
+    image: makemagic/api
     ports:
-    - '8080:8080'
-    - '5005:5005'
+      - '8080:8080'
     environment:
       - ADDITIONAL_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -Xmx1G -Xms128m -XX:MaxMetaspaceSize=128m
       - PROFILE=dev
     links:
       - db
+      - redis
   db:
     image: mysql:5.6
     ports:
-      - '3306:3306'
+      - '3308:3308'
+      - '5005:5005'
     environment:
       - MYSQL_ROOT_HOST=%
       - MYSQL_DATABASE=potterapi
@@ -24,3 +25,10 @@ services:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
     volumes:
       - ./docker/volume_mysql:/var/lib/mysql
+  redis:
+    image: redis:6.0.8
+    ports:
+      - '6379:6379'
+    volumes:
+      - ./docker/volume_redis:/data
+    command: redis-server --appendonly yes
