--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #spring.datasource.password=root
 
 #DataSource on Docker
-spring.datasource.url=jdbc:mysql://db:3306/potterapi?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://db:3306/potterapi
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.name=SpringBootMySQLDataSource
@@ -24,7 +24,6 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.idle-timeout=10000
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 
 # MySQL
